--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 h1{
     font-size:50px;
 }
+h2{
+    font-size: 40px;
+}
 .Orange-color{
     color: orange;
 }
@@ -19,6 +22,7 @@ h1{
 }
 .half-width img{
     width: 80%;
+    text-align: justify;
 }
 .link-Button{
     text-decoration: none;
@@ -41,4 +45,18 @@ h1{
     background-repeat: no-repeat;
     background-position: right;
     text-align: justify;
+}
+.Experience-Item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right:5% ;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+}
+.Experience-Area{
+    background-image:url(images/exp-bg.png) ;
+    background-position: left;
+    background-repeat: no-repeat;
+    
 }
